--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,14 +60,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/category_images/biryani.png
-     - assets/category_images/maha.png
-     - assets/category_images/malwani.png
-     - assets/category_images/nasta.png
-     - assets/category_images/punjabi.png
-     - assets/category_images/raj.png
-     - assets/category_images/south.png
-     - assets/category_images/img.png
+     - assets/category_images/
+     - assets/meal_images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
